Minor performance fixes

--- a/DeepAI/Info.plist
+++ b/DeepAI/Info.plist
@@ -5,19 +5,20 @@
     <key>NSHumanReadableCopyright</key>
     <string>Copyright © 2024</string>
     <key>CFBundleIdentifier</key>
-    <string>IT.DeepAI</string>
+    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
     <key>CFBundleName</key>
     <string>DeepAI</string>
     <key>CFBundleVersion</key>
-    <string>1.0</string>
+    <string>$(CURRENT_PROJECT_VERSION)</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
+    <string>$(MARKETING_VERSION)</string>
     <key>LSMinimumSystemVersion</key>
     <string>13.5</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>NSSupportsAutomaticGraphicsSwitching</key>
     <true/>
+    <key>NSInputMonitoringUsageDescription</key>
+    <string>DeepAI needs Input Monitoring to detect the ⌘C ⌘C hotkey and show the translation popup.</string>
 </dict>
 </plist>
-
