--- a/DeepAI/Info.plist
+++ b/DeepAI/Info.plist
@@ -19,6 +19,6 @@
     <key>NSSupportsAutomaticGraphicsSwitching</key>
     <true/>
     <key>NSInputMonitoringUsageDescription</key>
-    <string>DeepAI needs Input Monitoring to detect the ⌘C ⌘C hotkey and show the translation popup.</string>
+    <string>DeepAI needs Input Monitoring to detect your configured hotkey and show the translation popup.</string>
 </dict>
 </plist>
