Text formatting in the popup window

--- a/TinyAI/Info.plist
+++ b/TinyAI/Info.plist
@@ -13,7 +13,7 @@
     <key>CFBundleShortVersionString</key>
     <string>$(MARKETING_VERSION)</string>
     <key>LSMinimumSystemVersion</key>
-    <string>13.5</string>
+    <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>NSSupportsAutomaticGraphicsSwitching</key>
